<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>org.demo.wpplugin</groupId>
    <artifactId>DemoWPPlugin</artifactId>
    <version>1.0.0-SNAPSHOT</version>

    <repositories>
        <repository>
            <id>oss.sonatype.org-snapshot</id>
            <url>https://oss.sonatype.org/content/repositories/snapshots</url>
            <releases>
                <enabled>false</enabled>
            </releases>
            <snapshots>
                <enabled>true</enabled>
            </snapshots>
        </repository>
    </repositories>

    <parent>
        <groupId>org.pepsoft.worldpainter</groupId>
        <artifactId>PluginParent</artifactId>
        <version>1.9.0</version>
    </parent>

    <properties>
        <maven.compiler.source>8</maven.compiler.source>
        <maven.compiler.target>8</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
    </properties>

    <build>
        <outputDirectory>target/classes</outputDirectory>
        <resources>
            <resource>
                <directory>src/main/resources</directory>
                <includes>
                    <include>org.demo.wpplugin.properties</include>
                    <include>org.pepsoft.worldpainter.plugins</include>
                </includes>
                <filtering>true</filtering>
            </resource>
            <resource>
                <directory>src/main/resources</directory>
                <excludes>
                    <exclude>org.demo.wpplugin.properties</exclude>
                    <exclude>org.pepsoft.worldpainter.plugins</exclude>
                </excludes>
                <filtering>false</filtering>
            </resource>
        </resources>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>11</source>
                    <target>11</target>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <dependencies>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-api</artifactId>
            <version>5.9.1</version>
            <scope>test</scope>
        </dependency>
        <!-- https://mvnrepository.com/artifact/com.aparapi/aparapi -->
        <dependency>
            <groupId>com.aparapi</groupId>
            <artifactId>aparapi</artifactId>
            <version>3.0.2</version>
        </dependency>

    </dependencies>

    <profiles>
        <profile>
            <id>debug-tests</id>
            <properties>
                <maven.surefire.debug>true</maven.surefire.debug>
            </properties>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-surefire-plugin</artifactId>
                        <version>3.5.0</version>
                        <configuration>
                            <forkCount>0</forkCount>
                            <argLine>
                                -agentlib:jdwp=transport=dt_socket,server=y,suspend=y,address=*:5005
                            </argLine>
                        </configuration>
                    </plugin>
                </plugins>
            </build>
        </profile>

        <!-- Enable this profile and execute the test phase in order to run your plugin with WorldPainter. -->
        <profile>

            <id>testWithWorldPainter</id>
            <dependencies>
                <dependency>
                    <groupId>org.pepsoft.worldpainter</groupId>
                    <artifactId>WPGUI</artifactId>
                    <!-- Update this to the version of WorldPainter you wish to test with: -->
                    <version>2.21.1</version>
                    <scope>compile</scope>
                </dependency>
            </dependencies>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.codehaus.mojo</groupId>
                        <artifactId>exec-maven-plugin</artifactId>
                        <version>3.0.0</version>
                        <executions>
                            <execution>
                                <goals>
                                    <goal>exec</goal>
                                </goals>
                                <phase>test</phase>
                            </execution>
                        </executions>
                        <configuration>
                            <executable>java</executable>
                            <arguments>
                                <argument>-classpath</argument>
                                <classpath/>
                                <!-- Uncomment this to enable debugging. Change suspend=n to suspend=y if you want to debug plugin loading or initialisation: -->
                                <argument>-agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=*:5005
                                </argument>
                                <argLine>-ea</argLine>
                                <!-- These exports are needed from Java 9+ to make the JIDE GUI framework work: -->
                                <argument>--add-exports</argument>
                                <argument>java.desktop/com.sun.java.swing.plaf.windows=ALL-UNNAMED</argument>
                                <argument>--add-exports</argument>
                                <argument>java.desktop/javax.swing.plaf.synth=ALL-UNNAMED</argument>
                                <argument>--add-exports</argument>
                                <argument>java.desktop/sun.awt.shell=ALL-UNNAMED</argument>
                                <argument>--add-exports</argument>
                                <argument>java.desktop/sun.swing=ALL-UNNAMED</argument>
                                <argument>--add-exports</argument>
                                <argument>java.desktop/sun.awt=ALL-UNNAMED</argument>
                                <argument>--add-exports</argument>
                                <argument>java.desktop/sun.awt.windows=ALL-UNNAMED</argument>
                                <argument>--add-exports</argument>
                                <argument>java.desktop/sun.awt.image=ALL-UNNAMED</argument>
                                <argument>--add-exports</argument>
                                <argument>java.base/sun.security.action=ALL-UNNAMED</argument>
                                <argument>org.pepsoft.worldpainter.Main</argument>
                            </arguments>
                        </configuration>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>
</project>